# HacktoberFest-23

./: COUNTRIBUTING.md  README.md
Contributors/: ContributorsList.js
Projects_By_Contributors/: Folders_By_Your_Name.txt
Projects_By_Contributors/Bhavesh/: Tic-Tac-Toe.c
Projects_By_Contributors/Copy Sharable Link Feature - using Javascript/: index.html
Projects_By_Contributors/Copy Sharable Link Feature - using Javascript/css/: styles.css
Projects_By_Contributors/Copy Sharable Link Feature - using Javascript/js/: script.js
Projects_By_Contributors/MannuVilasara/Runa/: .env.example  pyproject.toml
Projects_By_Contributors/MannuVilasara/Runa/bot/: config.py  main.py  requirements.txt
Projects_By_Contributors/MannuVilasara/Runa/bot/cogs/: background.py  economy.py  giveaway.py  help.py  leveling.py  log.py  moderation.py  modmail.py  modmail_setup.py  react.py  webhook.py  welcome.py
Projects_By_Contributors/MannuVilasara/Runa/bot/utils/: mongo.py
Projects_By_Contributors/Nitish_K/: index.html
Projects_By_Contributors/QR Code Generator/: index.html  main.js  style.css
